# butfit-bit-szz

./: .gitignore  .manifest.json  README.md  hot.md  index.md  log.md  pyproject.toml
.github/: pandoc-header.tex
_meta/: taxonomy.md
_raw/: caste-otazky-szz.md
okruhy/: 01-polovodicove-prvky-cmos.md  02-kombinacni-logicke-obvody.md  03-sekvencni-logicke-obvody.md  04-hierarchie-pameti.md  05-vestavene-systemy.md  06-periferie-preruseni-dma-sbernice.md  07-princip-cinnosti-pocitace-pipelining.md  08-minimalizace-logickych-vyrazu.md  09-reprezentace-cisel-ieee754.md  10-fpga-vhdl.md  11-2d-vektorova-grafika.md  12-3d-transformace-pipeline.md  13-graficka-uzivatelska-rozhrani.md  14-spektralni-analyza.md  15-cislicove-filtry.md  16-mnoziny-relace-zobrazeni.md  17-diferencialni-integralni-pocet.md  18-ciselne-soustavy.md  19-vyrokova-predikatova-logika.md  20-boolovy-algebry.md  21-regularni-jazyky.md  22-bezkontextove-jazyky.md  23-struktura-prekladace.md  24-numericke-metody.md  25-teorie-grafu.md  26-reseni-uloh-prohledavani.md  27-strojove-uceni.md  28-modelovani-simulace.md  29-datove-ridici-struktury.md  30-vyhledavani-razeni.md  31-pravdepodobnost-statistika.md  32-slozitost-algoritmu.md  33-zivotni-cyklus-sw.md  34-uml.md  35-konceptualni-modelovani-db.md  36-relacni-data-sql-transakce.md  37-webova-rozhrani-autentizace.md  38-sprava-souboru-pameti.md  39-planovani-synchronizace-procesu.md  40-objektova-orientace.md  (+4 more)
scripts/: build_pdf.py  pandoc-header.tex
synthesis/: fourier-konvoluce-filtry.md  konecne-automaty-napric-obory.md  kryptografie-autentizace.md  (+6 more)
(+45 files in other folders)
